--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 # MONGODB (MongoProperties)
 spring.data.mongodb.uri=mongodb://192.168.1.61:27017/ProductDB
+spring.data.mongodb.username=mongoadmin
+spring.data.mongodb.password=password
