--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.data.mongodb.uri=mongodb://192.168.1.61:27017/ProductDB
 spring.data.mongodb.username=mongoadmin
 spring.data.mongodb.password=password
+spring.data.mongodb.authentication-database=admin
